fix: cors & notes delete feature